Proyecto 49: Custom Video Player

--- a/day49-VideoPlayer/index.html
+++ b/day49-VideoPlayer/index.html
@@ -24,7 +24,7 @@
             <div class="panel--container">
                 <div class="progress">
                     <div class="progress--bar"></div>
-                    <input type="range" name="progress" class="progress__slider" id="range" value="5">
+                    <div class="progress__slider" id="range"></div>
                 </div>
                 <div class="controllers">
                     <button class="play btn" id="btn">
