--- a/day49-VideoPlayer/index.html
+++ b/day49-VideoPlayer/index.html
@@ -32,11 +32,11 @@
                         <span class="player"></span>
                     </button>
                     <div class="volume--container">
-                        <input type="range" name="slider" class="slider" id="slide">
+                        <input type="range" name="slider" class="slider" id="slide" value="5">
                         <div class="mute--btn"></div>
                     </div>
                     <div class="timer--container">
-                        <span class="timer">00:00</span>
+                        <span class="timer">0:00/0:00</span>
                     </div>
                     <div class="preview--controllers">
                         <button class="prev btn">
