--- a/day49-VideoPlayer/index.html
+++ b/day49-VideoPlayer/index.html
@@ -18,9 +18,9 @@
     <div class='container'>
         <h1 class="heading">video player</h1>
         <div class="video--container">
-            <video src="video/Another-You.mp4">
+            <!-- <video src="video/Another-You.mp4">
                 <p>Your browser does not support the video element</p>
-            </video>
+            </video> -->
             <div class="panel--container">
                 <div class="progress">
                     <div class="progress--bar"></div>
@@ -51,6 +51,7 @@
                 </div><!-- Controlls -->
             </div><!-- Panel Container -->
         </div><!-- Video Container -->
+        <div class="status">Track</div>
     </div><!-- Container -->
     <script src='js/script.js'></script>
 </body>
