Proyecto 49: Video Player
Se agregaron nuevas líneas de código, en los archivos styles.scss y script.js

--- a/day49-VideoPlayer/index.html
+++ b/day49-VideoPlayer/index.html
@@ -24,23 +24,23 @@
                     <div class="progress__slider" id="range"></div>
                 </div>
                 <div class="controllers">
-                    <button class="play btn" id="btn">
+                    <button class="play btn" id="btn" title="Play / Pause">
                         <!-- <i class="fas fa-play"></i> -->
                         <span class="player"></span>
                     </button>
-                    <div class="volume--container">
+                    <div class="volume--container" title="Volume Slider">
                         <input type="range" name="slider" class="slider" id="slide" value="5">
-                        <div class="mute--btn"></div>
+                        <button class="mute--btn btn" title="Mute Sound"></button>
                     </div>
                     <div class="timer--container">
                         <span class="timer">0:00/0:00</span>
                     </div>
                     <div class="preview--controllers">
-                        <button class="prev btn">
+                        <button class="prev btn" title="Previous">
                             <!-- <i class="fas fa-chevron-left"></i> -->
                             <span class="chevron--left"></span>
                         </button>
-                        <button class="next btn">
+                        <button class="next btn" title="Next">
                             <!-- <i class="fas fa-chevron-right"></i> -->
                             <span class="chevron--right"></span>
                         </button>
