--- a/day50-MusicPlayer/index.html
+++ b/day50-MusicPlayer/index.html
@@ -20,7 +20,7 @@
             <h1 class="heading">music player</h1>
         </header>
         <div class="music--player">
-            <div class="progress--box">
+            <div class="progress--box" id="box">
                 <div class="progress">
                     <div class="progress--bar" id="progress"></div>
                 </div>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="controls--container">
                     <button class="backward btn" id="prev"></button>
-                    <button class="player btn active" id="player"></button>
+                    <button class="player btn" id="player"></button>
                     <button class="forward btn" id="next"></button>
                 </div>
                 <div class="volume--container">
@@ -40,7 +40,7 @@
                 </div>
 
             </div>
-            <div class="info">
+            <div class="info" id="info">
                 <p><span>author:</span> 50 cent</p>
                 <p><span>title:</span> 21 questions</p>
             </div>
