Proyecto 51: Menu UI Design

--- a/day51-MenuUIDesign/index.html
+++ b/day51-MenuUIDesign/index.html
@@ -19,14 +19,7 @@
         <div class="mobile">
             <header class="app--header">
                 <h3 class="logo">coding<span>styles</span></h3>
-                <div class="toggle--container">
-                    <div class="toggle">
-                        <div class="bar half start"></div>
-                        <div class="bar half"></div>
-                        <div class="bar half end"></div>
-                    </div>
-                    <p class="title">menu</p>
-                </div>
+                
                 <nav class="nav--header">
                     <ul class="nav--menu">
                         <li class="item"><a href="#" class="link">home <span class="material-icons">home</span></a></li>
@@ -38,6 +31,14 @@
                     </ul>
                 </nav>
                 <h2 class="heading">ui <span>design</span></h2>
+                <div class="toggle--container">
+                    <div class="toggle">
+                        <div class="bar half start"></div>
+                        <div class="bar"></div>
+                        <div class="bar half end"></div>
+                    </div>
+                    <!-- <p class="title">menu</p> -->
+                </div>
             </header>
         </div>
     </div>
