--- a/day52-ImageBroken/index.html
+++ b/day52-ImageBroken/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='description' content=''>
     <meta name='author' content=''>
-    <title>Document</title>
+    <title>Styling Broken Image</title>
     <!-- Mobile Specific Metas -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Fonts -->
@@ -16,7 +16,8 @@
 </head>
 <body>
     <div class='container'>
-        <div class="image--container"><img src="" alt="" class="image" data-text="image is broken"></div>
+        <div class="image--container">
+            <img alt="no image" class="image" data-text="image is broken"></div>
         <div class="point"></div>
     </div>
     <script src='js/script.js'></script>
