--- a/day53-Calculator/index.html
+++ b/day53-Calculator/index.html
@@ -18,26 +18,128 @@
     <div class='container'>
         <div class="calculator">
             <div class="display--container">
-                <input type="text" class="display" id="display" disabled>
+                <input type="text" class="display" id="display" disabled placeholder="0">
             </div>
             <div class="buttons--container">
-                <button class="btn" id="n-7">7</button>
-                <button class="btn" id="n-8">8</button>
-                <button class="btn" id="n-9">9</button>
-                <button class="btn" id="n-4">4</button>
-                <button class="btn" id="n-5">5</button>
-                <button class="btn" id="n-6">6</button>
-                <button class="btn" id="n-1">1</button>
-                <button class="btn" id="n-2">2</button>
-                <button class="btn" id="n-3">3</button>
-                <button class="btn" id="n-0">0</button>
-                <button class="btn" id="add">+</button>
-                <button class="btn" id="minus">-</button>
-                <button class="btn" id="division">/</button>
-                <button class="btn" id="multiply">*</button>
-                <button class="btn" id="equal" type="submit">=</button>
-                <button class="btn" id="point">.</button>
-                <button class="btn" id="clean">c</button>
+                <button class="btn" id="n-7">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        7
+                    </span>
+                </button>
+                <button class="btn" id="n-8">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        8
+                    </span>
+                </button>
+                <button class="btn" id="n-9">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        9
+                    </span>
+                </button>
+                <button class="btn" id="n-4">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        4
+                    </span>
+                </button>
+                <button class="btn" id="n-5">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        5
+                    </span>
+                </button>
+                <button class="btn" id="n-6">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        6
+                    </span>
+                </button>
+                <button class="btn" id="n-1">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        1
+                    </span>
+                </button>
+                <button class="btn" id="n-2">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        2
+                    </span>
+                </button>
+                <button class="btn" id="n-3">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        3
+                    </span>
+                </button>
+                <button class="btn" id="n-0">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        0
+                    </span>
+                </button>
+                <button class="btn" id="add">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        +
+                    </span>
+                </button>
+                <button class="btn" id="minus">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        -
+                    </span>
+                </button>
+                <button class="btn" id="division">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        /
+                    </span>
+                </button>
+                <button class="btn" id="multiply">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        *
+                    </span>
+                </button>
+                <button class="btn" id="equal" type="submit">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        =
+                    </span>
+                </button>
+                <button class="btn" id="point">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        .
+                    </span>
+                </button>
+                <button class="btn" id="clean">
+                    <span class="shadow"></span>
+                    <span class="edge"></span>
+                    <span class="front">
+                        c
+                    </span>
+                </button>
             </div>
         </div>
     </div>
