Added dataset element

--- a/day53-Calculator/index.html
+++ b/day53-Calculator/index.html
@@ -21,119 +21,119 @@
                 <input type="text" class="display" id="display" disabled placeholder="0">
             </div>
             <div class="buttons--container">
-                <button class="btn" id="n-7">
+                <button class="btn" id="n-7" data-number="7">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         7
                     </span>
                 </button>
-                <button class="btn" id="n-8">
+                <button class="btn" id="n-8" data-number="8">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         8
                     </span>
                 </button>
-                <button class="btn" id="n-9">
+                <button class="btn" id="n-9" data-number="9">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         9
                     </span>
                 </button>
-                <button class="btn" id="n-4">
+                <button class="btn" id="n-4" data-number="4">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         4
                     </span>
                 </button>
-                <button class="btn" id="n-5">
+                <button class="btn" id="n-5" data-number="5">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         5
                     </span>
                 </button>
-                <button class="btn" id="n-6">
+                <button class="btn" id="n-6" data-number="6">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         6
                     </span>
                 </button>
-                <button class="btn" id="n-1">
+                <button class="btn" id="n-1" data-number="1">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         1
                     </span>
                 </button>
-                <button class="btn" id="n-2">
+                <button class="btn" id="n-2" data-number="2">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         2
                     </span>
                 </button>
-                <button class="btn" id="n-3">
+                <button class="btn" id="n-3" data-number="3">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         3
                     </span>
                 </button>
-                <button class="btn" id="n-0">
+                <button class="btn" id="n-0" data-number="0">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         0
                     </span>
                 </button>
-                <button class="btn" id="add">
+                <button class="btn" id="add" data-number="+">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         +
                     </span>
                 </button>
-                <button class="btn" id="minus">
+                <button class="btn" id="minus" data-number="-">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         -
                     </span>
                 </button>
-                <button class="btn" id="division">
+                <button class="btn" id="division" data-number="/">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         /
                     </span>
                 </button>
-                <button class="btn" id="multiply">
+                <button class="btn" id="multiply" data-number="*">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         *
                     </span>
                 </button>
-                <button class="btn" id="equal" type="submit">
+                <button class="btn" id="equal" type="submit" data-number="=">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         =
                     </span>
                 </button>
-                <button class="btn" id="point">
+                <button class="btn" id="point" data-number=".">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
                         .
                     </span>
                 </button>
-                <button class="btn" id="clean">
+                <button class="btn" id="clean" data-number="c">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
