Modified styles.scss, index.html and script.js code

--- a/day53-Calculator/index.html
+++ b/day53-Calculator/index.html
@@ -21,119 +21,119 @@
                 <input type="text" class="display" id="display" disabled placeholder="0">
             </div>
             <div class="buttons--container">
-                <button class="btn" id="n-7" data-number="7">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="7">
                         7
                     </span>
                 </button>
-                <button class="btn" id="n-8" data-number="8">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="8">
                         8
                     </span>
                 </button>
-                <button class="btn" id="n-9" data-number="9">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="9">
                         9
                     </span>
                 </button>
-                <button class="btn" id="n-4" data-number="4">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="4">
                         4
                     </span>
                 </button>
-                <button class="btn" id="n-5" data-number="5">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="5">
                         5
                     </span>
                 </button>
-                <button class="btn" id="n-6" data-number="6">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="6">
                         6
                     </span>
                 </button>
-                <button class="btn" id="n-1" data-number="1">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="1">
                         1
                     </span>
                 </button>
-                <button class="btn" id="n-2" data-number="2">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="2">
                         2
                     </span>
                 </button>
-                <button class="btn" id="n-3" data-number="3">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="3">
                         3
                     </span>
                 </button>
-                <button class="btn" id="n-0" data-number="0">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="0">
                         0
                     </span>
                 </button>
-                <button class="btn" id="add" data-number="+">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="+">
                         +
                     </span>
                 </button>
-                <button class="btn" id="minus" data-number="-">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="-">
                         -
                     </span>
                 </button>
-                <button class="btn" id="division" data-number="/">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="/">
                         /
                     </span>
                 </button>
-                <button class="btn" id="multiply" data-number="*">
+                <button type="button" class="btn" >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num="*">
                         *
                     </span>
                 </button>
-                <button class="btn" id="equal" type="submit" data-number="=">
+                <button type="button" class="btn" id="equal" type="submit">
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="equal">
                         =
                     </span>
                 </button>
-                <button class="btn" id="point" data-number=".">
+                <button type="button" class="btn"  >
                     <span class="shadow"></span>
                     <span class="edge"></span>
-                    <span class="front">
+                    <span class="front" data-num=".">
                         .
                     </span>
                 </button>
-                <button class="btn" id="clean" data-number="c">
+                <button type="button" class="btn" id="clean">
                     <span class="shadow"></span>
                     <span class="edge"></span>
                     <span class="front">
