--- a/day55-HexColorPicker/index.html
+++ b/day55-HexColorPicker/index.html
@@ -5,19 +5,22 @@
     <meta charset='UTF-8'>
     <meta name='description' content=''>
     <meta name='author' content=''>
-    <title>Document</title>
+    <title>Hex Color Picker</title>
     <!-- Mobile Specific Metas -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Fonts -->
     <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Abel&family=Montserrat:wght@200;300&display=swap'>
     <!-- CSS -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css'>
-    <link rel='stylesheet' href='css/'>
+    <link rel='stylesheet' href='css/styles.css'>
 </head>
 <body>
     <div class='container'>
-        
+        <div class="output--container">
+            <span class="output">#2c3e50</span>
+        </div>
+        <button class="btn">click me</button>
     </div>
-    <script src='js/'></script>
+    <script src='js/script.js'></script>
 </body>
 </html>
