Added lines of code on our files

--- a/day56-DigitalClock/index.html
+++ b/day56-DigitalClock/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='description' content=''>
     <meta name='author' content=''>
-    <title>Document</title>
+    <title>Digital Clock</title>
     <!-- Mobile Specific Metas -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Fonts -->
@@ -17,23 +17,23 @@
 <body>
     <div class='container'>
         <header class="header">
-            <h1 class="heading">the tiem is</h1>
+            <h1 class="heading">the time is</h1>
         </header>
         <div class="clock--container">
             <div class="clock">
-                <div class="hr">
+                <div class="hand hr">
                     <span class="time">00</span>
                 </div>
                 <div class="points">:</div>
-                <div class="min">
+                <div class="hand min">
                     <span class="time">00</span>
                 </div>
                 <div class="points">:</div>
-                <div class="sec">
+                <div class="hand sec">
                     <span class="time">00</span>
                 </div>
-                <div class="pm--am">
-                    <p>pm</p>
+                <div class="am--pm">
+                    <p class="desc">a.m</p>
                 </div>
             </div>
         </div>
