Added new lines of code on styles.scss and script.js also was changed and deleted some classes name on index.html

--- a/day57-AnalogClock/index.html
+++ b/day57-AnalogClock/index.html
@@ -5,7 +5,7 @@
     <meta charset='UTF-8'>
     <meta name='description' content=''>
     <meta name='author' content=''>
-    <title>Document</title>
+    <title>Analog Clock</title>
     <!-- Mobile Specific Metas -->
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <!-- Fonts -->
@@ -18,14 +18,14 @@
     <div class='container'>
         <div class="clock--container">
             <div class="clock">
-                <div class="hand hr"></div>
-                <div class="hand min"></div>
-                <div class="hand sec"></div>
+                <div class="hand hh"></div>
+                <div class="hand mn"></div>
+                <div class="hand ss"></div>
                 <div class="indicators">
-                    <span class="dials one">3</span>
-                    <span class="dials two">6</span>
-                    <span class="dials three">9</span>
-                    <span class="dials four">12</span>
+                    <span class="dials">3</span>
+                    <span class="dials">6</span>
+                    <span class="dials">9</span>
+                    <span class="dials">12</span>
                 </div>
             </div>
         </div>
