--- a/day57-AnalogClock/index.html
+++ b/day57-AnalogClock/index.html
@@ -26,6 +26,14 @@
                     <span class="dials">6</span>
                     <span class="dials">9</span>
                     <span class="dials">12</span>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </div>
             </div>
         </div>
